--- a/views/appointments.html
+++ b/views/appointments.html
@@ -15,5 +15,6 @@
 <input type="text" id="confirmation" name="confirmation" class="rvt-label" placeholder="Confrimation"><br><br>
 <br/>
 </fieldset>
-<a href = "/"><button class="rvt-button">Go Home </button></a>  <input type="submit" class="rvt-button rvt-button--success" value="Submit" />
+<input type="submit" class="rvt-button rvt-button--success" value="Submit" />
 </form>
+<a href = "/"><button class="rvt-button">Go Home </button></a>  
