--- a/views/cancelation.html
+++ b/views/cancelation.html
@@ -123,8 +123,9 @@
   <label for="confirmation" class="rvt-label">Confirmation Number</label><br>
   <input type="number" id="confirmation" name="confirmation" class="rvt-label" placeholder="98765" maxlength=5><br><br>
   </fieldset>
-    <a href = "/"><button class="rvt-button">Go Back </button></a> <input type="submit" class="rvt-button rvt-button--success" value="Add Cancelation" />
+    <input type="submit" class="rvt-button rvt-button--success" value="Add Cancelation" />
 </form>
+<a href = "/"><button class="rvt-button">Go Back </button></a> 
 </body>
 
 
