--- a/views/errorpage.html
+++ b/views/errorpage.html
@@ -141,7 +141,7 @@
             <div class="rvt-container-sm">
                 
                 <div class="rvt-p-top-xs rvt-p-bottom-xxl rvt-border-bottom">
-                    <a href = "index.html"><button class="rvt-button">Go Home </button></a>
+                    <a href = "/"><button class="rvt-button">Go Home </button></a>
                 </div>
             </div>
         </div>
