--- a/views/studentinfo.html
+++ b/views/studentinfo.html
@@ -131,8 +131,9 @@
    
     <br/>
 </fieldset>
-<a href = "/reservations"><button class="rvt-button">Go Back </button></a>  <input type="submit" class="rvt-button rvt-button--success" value="Add Student" />
+<input type="submit" class="rvt-button rvt-button--success" value="Add Student" />
 </form>
+<a href = "/reservations"><button class="rvt-button">Go Back </button></a>  
 <div>
 </div>
 </body>
