--- a/views/confirmation.html
+++ b/views/confirmation.html
@@ -110,6 +110,19 @@
         div{
           text-align: center;
         }
+        table {
+            margin-left: auto;
+            margin-right: auto;
+            
+        }
+
+        table, th, td{
+            border: 2px solid #01426A;
+        }
+
+        th {
+            text-align: center;
+        }
     
       </style>
   </header>
@@ -118,18 +131,37 @@
     
 
   <h1>Confirmation</h1>
-  <img src = "public/Icons8_flat_approval.png">
-  <p>thank you</p>
+  <p>Thank You!</p>
   
   <p>
     Thank you for making your reservation at the IUK library. <br>
     An email with your confirmation number has been sent.<br><br>
     
+    <table style="width: 35%;">
+        <tr>
+            <th colspan="2">Reservation Information</th>
+        </tr>
+
+        <tr>
+            <td>Confirmation Number:</td>
+            <td><div id="conNum"></div></td>
+        </tr>
+  
+        <tr>
+            <td>Date:</td>
+            <td><div id="rDate"></div></td>
+        </tr>   
     
-    The date of your reservation is:           <div id="rDate"></div>
-    The time of your reservation is:           <div id="rTime"></div><br>
-    Your room number is:                      <div id="roomNum"></div><br>
-    Your confirmation number is:              <div id="conNum"></div>
+        <tr>
+            <td>Time:</td>
+            <td><div id="rTime"></div></td>
+        </tr>
+
+        <tr>
+            <td>Room Number:</td>
+            <td><div id="roomNum"></div></td>
+        </tr>
+    </table>
 
     <img src="/images/Icons8_flat_approval.png"> 
 </p>
