--- a/views/reservations.html
+++ b/views/reservations.html
@@ -164,8 +164,9 @@
         
     </br>
     </fieldset>
-    <a href = "/"><button class="rvt-button">Go Back </button></a> <input type="submit" class="rvt-button rvt-button--success" value="Add Reservation" />
+    <input type="submit" class="rvt-button rvt-button--success" value="Add Reservation" />
   </form>
+  <a href = "/"><button class="rvt-button">Go Back </button></a> 
   <div>
   
 
