--- a/views/reservations.html
+++ b/views/reservations.html
@@ -129,7 +129,7 @@
     
     <fieldset>
     <label for="date" class="rvt-label">Enter the date of the study room reservation:</label><br>
-    <input type="date" id="date" name="date" class="rvt-label"><br></br>
+    <input type="date" id="date" name="date" class="rvt-label" required><br></br>
 
   <label for="time" class="rvt-label">Select the time of the reservation:</label><br>
   <input type="time" id="time" name="time" class="rvt-label"><br></br>
