--- a/views/studentinfo.html
+++ b/views/studentinfo.html
@@ -151,7 +151,7 @@
                     <a class="rvt-footer-base__link" href="https://accessibility.iu.edu/assistance/">Accessibility</a>
                 </li>
                 <li class="rvt-footer-base__item">
-                    <a class="rvt-footer-base__link" href="#0">Privacy Notice</a>
+                    <a class="rvt-footer-base__link" href="https://www.iuk.edu/uits/privacy-policy.html/">Privacy Notice</a>
                 </li>
                 <li class="rvt-footer-base__item">
                     Copyright</a> © 2021 The Trustees of Indiana University
