--- a/views/reservations.html
+++ b/views/reservations.html
@@ -120,11 +120,15 @@
 
 
 
+
 <body>
   <h1>Study Room Reservations</h1>
   <h2>Room Information</h2>
   <p>Please enter the following information:</p>
-
+  <script>
+    let currDate = Date();
+    currDate;
+</script>
   <form method="post" action="/reservations">
     
     <fieldset>
