including table and edits

--- a/views/reservations.html
+++ b/views/reservations.html
@@ -114,11 +114,20 @@
       div{
         text-align: center;
       }
+
+      table{
+        border: 1px solid;
+      }
+
+      @media only screen and (max-width: 1079px) {
+
+      }
+
+      @media only screen and (min-width: 1080px) {
+        
+      }
     </style>
 </header>
-
-
-
 
 <body>
   <h1>Study Room Reservations</h1>
@@ -168,8 +177,99 @@
   </form>
   <a href = "/"><button class="rvt-button">Go Back </button></a> 
   <div>
-  
 
+    <!-- Study room description table -->
+    <div class="rvt-box">
+      <div class="rvt-box__body">
+        <div class="rvt-container--center" style="max-width: 30%">
+            <table class="rvt-table-compact">
+                <caption class="rvt-sr-only">Room Description Table</caption>
+                <thead>
+                  <tr>
+                    <th colspan="3" style="text-align: center; background-color: #006298; color: white;">First Floor</th>
+                  </tr>
+                </thead>
+                <tbody>
+                  <tr>
+                    <td>KA 116</td>
+                    <td>Lobby area</td>
+                    <td>8</td>
+                  </tr>
+                  <tr>
+                    <td>KA 118</td>
+                    <td>Lobby area</td>
+                    <td>8</td>
+                  </tr>
+                  <tr>
+                    <td>KA 147</td>
+                    <td>West Commons</td>
+                    <td>6</td>
+                  </tr>
+                  <tr>
+                    <td>KA 149</td>
+                    <td>West Commons</td>
+                    <td>6</td>
+                  </tr>
+                  <tr>
+                    <td>KA 155</td>
+                    <td>West Commons</td>
+                    <td>6</td>
+                  </tr>
+                  <tr>
+                    <td>KA 157</td>
+                    <td>West Commons</td>
+                    <td>6</td>
+                  </tr>
+                  <tr>
+                    <td>KA 159</td>
+                    <td>West Commons</td>
+                    <td>2</td>
+                  </tr>
+                  <tr>
+                    <td>KA 160</td>
+                    <td>West Commons</td>
+                    <td>2</td>
+                  </tr>
+                  <tr>
+                    <td>KA 161</td>
+                    <td>West Commons</td>
+                    <td>2</td>
+                  </tr>
+                </tbody>
+              </table>
+
+              <table class="rvt-table-compact">
+                  <caption class="rvt-sr-only">Room Description Table</caption>
+                  <thead>
+                    <tr>
+                      <th colspan="3" style="text-align: center; background-color: #006298; color: white;">Second Floor</th>
+                    </tr>
+                  </thead>
+                  <tbody>
+                    <tr>
+                      <td>KA 220</td>
+                      <td>6</td>
+                    </tr>
+                    <tr>
+                      <td>KA 222</td>
+                      <td>6</td>
+                    </tr>
+                    <tr>
+                      <td>KA 224</td>
+                      <td>6</td>
+                    </tr>
+                    <tr>
+                      <td>KA 226</td>
+                      <td>6</td>
+                    </tr>
+                  </tbody>
+                </table>
+</div>
+</div>
+</div>
+<br>
+
+</body>
 
 <footer class="rvt-footer-base">
   <div class="rvt-container-lg">
