--- a/views/errorpage.html
+++ b/views/errorpage.html
@@ -107,6 +107,9 @@
         div{
           text-align: center;
         }
+
+        @media only screen and (max-width: 1079px) {
+        }
       </style>
   </header>
     <!--Main content area-->
