--- a/views/reservations.html
+++ b/views/reservations.html
@@ -119,12 +119,19 @@
         border: 1px solid;
       }
 
-      @media only screen and (max-width: 1079px) {
-
+      th{
+        text-align: center; 
+        background-color: #006298; 
+        color: white;
+        
       }
 
-      @media only screen and (min-width: 1080px) {
-        
+      @media only screen and (max-width: 1079px) {
+        table{
+          padding: 0px;
+          display: table;
+          white-space: nowrap;
+        }
       }
     </style>
 </header>
@@ -177,19 +184,13 @@
   </form>
   <a href = "/"><button class="rvt-button">Go Back </button></a> 
   <div>
+    <br>
 
     <!-- Study room description table -->
-    <div class="rvt-box">
-      <div class="rvt-box__body">
-        <div class="rvt-container--center" style="max-width: 30%">
-            <table class="rvt-table-compact">
-                <caption class="rvt-sr-only">Room Description Table</caption>
-                <thead>
+            <table style="max-width: 30%;">
                   <tr>
-                    <th colspan="3" style="text-align: center; background-color: #006298; color: white;">First Floor</th>
+                    <th colspan="3" style ="font-weight: bold;">First Floor</th>
                   </tr>
-                </thead>
-                <tbody>
                   <tr>
                     <td>KA 116</td>
                     <td>Lobby area</td>
@@ -235,38 +236,30 @@
                     <td>West Commons</td>
                     <td>2</td>
                   </tr>
-                </tbody>
-              </table>
-
-              <table class="rvt-table-compact">
-                  <caption class="rvt-sr-only">Room Description Table</caption>
-                  <thead>
                     <tr>
-                      <th colspan="3" style="text-align: center; background-color: #006298; color: white;">Second Floor</th>
+                      <th colspan="3" style ="font-weight: bold;">Second Floor</th>
                     </tr>
-                  </thead>
-                  <tbody>
                     <tr>
                       <td>KA 220</td>
+                      <td>    </td>
                       <td>6</td>
                     </tr>
                     <tr>
                       <td>KA 222</td>
+                      <td>    </td>
                       <td>6</td>
                     </tr>
                     <tr>
                       <td>KA 224</td>
+                      <td>    </td>
                       <td>6</td>
                     </tr>
                     <tr>
                       <td>KA 226</td>
+                      <td>    </td>
                       <td>6</td>
                     </tr>
-                  </tbody>
                 </table>
-</div>
-</div>
-</div>
 <br>
 
 </body>
