--- a/views/studentinfo.html
+++ b/views/studentinfo.html
@@ -109,6 +109,9 @@
         div{
           text-align: center;
         }
+
+        @media only screen and (max-width: 1079px) {
+        }
       </style>
   </header>
 
