--- a/views/index.html
+++ b/views/index.html
@@ -110,6 +110,8 @@
 
         table{
         border: 1px solid;
+        margin-left: auto;
+        margin-right: auto;
       }
 
       th{
@@ -124,6 +126,10 @@
           padding: 0px;
           display: table;
           white-space: nowrap;
+        }
+
+        .rvt-button:hover{
+            font-size: 20px;
         }
       }
       </style>
