--- a/views/reservations.html
+++ b/views/reservations.html
@@ -117,6 +117,8 @@
 
       table{
         border: 1px solid;
+        margin-left: auto;
+        margin-right: auto;
       }
 
       th{
@@ -139,6 +141,82 @@
 <body>
   <h1>Study Room Reservations</h1>
   <h2>Room Information</h2>
+
+  <!-- Study room description table -->
+  <table style="max-width: 30%;">
+    <tr>
+      <th colspan="3" style ="font-weight: bold;">First Floor</th>
+    </tr>
+    <tr>
+      <td>KA 116</td>
+      <td>Lobby area</td>
+      <td>8</td>
+    </tr>
+    <tr>
+      <td>KA 118</td>
+      <td>Lobby area</td>
+      <td>8</td>
+    </tr>
+    <tr>
+      <td>KA 147</td>
+      <td>West Commons</td>
+      <td>6</td>
+    </tr>
+    <tr>
+      <td>KA 149</td>
+      <td>West Commons</td>
+      <td>6</td>
+    </tr>
+    <tr>
+      <td>KA 155</td>
+      <td>West Commons</td>
+      <td>6</td>
+    </tr>
+    <tr>
+      <td>KA 157</td>
+      <td>West Commons</td>
+      <td>6</td>
+    </tr>
+    <tr>
+      <td>KA 159</td>
+      <td>West Commons</td>
+      <td>2</td>
+    </tr>
+    <tr>
+      <td>KA 160</td>
+      <td>West Commons</td>
+      <td>2</td>
+    </tr>
+    <tr>
+      <td>KA 161</td>
+      <td>West Commons</td>
+      <td>2</td>
+    </tr>
+      <tr>
+        <th colspan="3" style ="font-weight: bold;">Second Floor</th>
+      </tr>
+      <tr>
+        <td>KA 220</td>
+        <td>    </td>
+        <td>6</td>
+      </tr>
+      <tr>
+        <td>KA 222</td>
+        <td>    </td>
+        <td>6</td>
+      </tr>
+      <tr>
+        <td>KA 224</td>
+        <td>    </td>
+        <td>6</td>
+      </tr>
+      <tr>
+        <td>KA 226</td>
+        <td>    </td>
+        <td>6</td>
+      </tr>
+  </table>
+
   <p>Please enter the following information:</p>
 
   <form method="post" action="/reservations">
@@ -184,82 +262,6 @@
   </form>
   <a href = "/"><button class="rvt-button">Go Back </button></a> 
   <div>
-    <br>
-
-    <!-- Study room description table -->
-            <table style="max-width: 30%;">
-                  <tr>
-                    <th colspan="3" style ="font-weight: bold;">First Floor</th>
-                  </tr>
-                  <tr>
-                    <td>KA 116</td>
-                    <td>Lobby area</td>
-                    <td>8</td>
-                  </tr>
-                  <tr>
-                    <td>KA 118</td>
-                    <td>Lobby area</td>
-                    <td>8</td>
-                  </tr>
-                  <tr>
-                    <td>KA 147</td>
-                    <td>West Commons</td>
-                    <td>6</td>
-                  </tr>
-                  <tr>
-                    <td>KA 149</td>
-                    <td>West Commons</td>
-                    <td>6</td>
-                  </tr>
-                  <tr>
-                    <td>KA 155</td>
-                    <td>West Commons</td>
-                    <td>6</td>
-                  </tr>
-                  <tr>
-                    <td>KA 157</td>
-                    <td>West Commons</td>
-                    <td>6</td>
-                  </tr>
-                  <tr>
-                    <td>KA 159</td>
-                    <td>West Commons</td>
-                    <td>2</td>
-                  </tr>
-                  <tr>
-                    <td>KA 160</td>
-                    <td>West Commons</td>
-                    <td>2</td>
-                  </tr>
-                  <tr>
-                    <td>KA 161</td>
-                    <td>West Commons</td>
-                    <td>2</td>
-                  </tr>
-                    <tr>
-                      <th colspan="3" style ="font-weight: bold;">Second Floor</th>
-                    </tr>
-                    <tr>
-                      <td>KA 220</td>
-                      <td>    </td>
-                      <td>6</td>
-                    </tr>
-                    <tr>
-                      <td>KA 222</td>
-                      <td>    </td>
-                      <td>6</td>
-                    </tr>
-                    <tr>
-                      <td>KA 224</td>
-                      <td>    </td>
-                      <td>6</td>
-                    </tr>
-                    <tr>
-                      <td>KA 226</td>
-                      <td>    </td>
-                      <td>6</td>
-                    </tr>
-                </table>
 <br>
 
 </body>
