--- a/views/reservations.html
+++ b/views/reservations.html
@@ -124,15 +124,19 @@
   <h1>Study Room Reservations</h1>
   <h2>Room Information</h2>
   <p>Please enter the following information:</p>
-
+    <script>
+        let currDate  = Date();
+    </script>
   <form method="post" action="/reservations">
     
     <fieldset>
     <label for="date" class="rvt-label">Enter the date of the study room reservation:</label><br>
     <input type="date" id="date" name="date" class="rvt-label" required><br></br>
+    <script></script>
 
   <label for="time" class="rvt-label">Select the time of the reservation:</label><br>
   <input type="time" id="time" name="time" class="rvt-label"><br></br>
+  <script></script>
  
   <label for="numpeople" class="rvt-label">Select the number of people in the reservation:</label><br>
       <input list="numpeople" name="numpeople" placeholder="Select people in reservation"><br></br>
@@ -164,6 +168,7 @@
         
     </br>
     </fieldset>
+    <script></script>
     <input type="submit" class="rvt-button rvt-button--success" value="Add Reservation" />
   </form>
   <a href = "/"><button class="rvt-button">Go Back </button></a> 
