--- a/views/cancelation.html
+++ b/views/cancelation.html
@@ -5,9 +5,10 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="robots" content="noindex">
         <title>Student Info</title>
-        <link rel="shortcut icon" type="image/jpg" href="/Users/jeanredfern/Documents/IUK Spring 2022/Dev & Design/CapstoneProject/views/images/favicon.jpg"/>
+        <link href="https://assets.iu.edu/favicon.ico" rel="shortcut icon" type="image/x-icon"/>
         <link rel="stylesheet" href="https://unpkg.com/rivet-core@2.0.0-beta.2/css/rivet.min.css">
-      </head>
+        <link rel="stylesheet" type="text/css"   href="/css/stylesheet.css">
+            </head>
       <body class="rvt-layout">
       
       <header class="rvt-header-wrapper">
