--- a/views/reservations.html
+++ b/views/reservations.html
@@ -133,6 +133,7 @@
     <script>
         let currDate  = Date();
         var selectedDate = document.getElementById().value;
+        let dateValue = selectedDate.value;
         if (selectedDate < currDate){
             reject("Date must be " + currDate + "or greater.")
         }
