--- a/views/cancelation.html
+++ b/views/cancelation.html
@@ -111,22 +111,20 @@
         </style>
       </header>
 <body>
-  <h1>STUDY ROOM CANCELLATION</h1>
+  <h1>Study Room Cancelation</h1>
 <p>To cancel your study room reservation, enter the following information<br>
-   and click "Confirm". If you do NOT wish to cancel your study room<br>
+   and click "Add Cancelation". If you do NOT wish to cancel your study room<br>
     reservation click "Return to Home."</p>
 <form method="post" action="/cancelation">    
     <fieldset>
-    <p>STUDENT ID NUMBER: </p>
   <label for="idnum" class="rvt-label">Student ID Number</label><br>
   <input type="number" id="idnum" name="idnum" class="rvt-label" placeholder="0123456789" maxlength=10><br><br>
-  <p>CONFIRMATION NUMBER: </p>
   <label for="confirmation" class="rvt-label">Confirmation Number</label><br>
   <input type="number" id="confirmation" name="confirmation" class="rvt-label" placeholder="98765" maxlength=5><br><br>
   </fieldset>
     <input type="submit" class="rvt-button rvt-button--success" value="Add Cancelation" />
 </form>
-<a href = "/"><button class="rvt-button">Go Back </button></a> 
+<a href = "/"><button class="rvt-button">Return to Home</button></a> 
 </body>
 
 
