--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,44 +1,5 @@
-<!DOCTYPE html>
-
-
-<html lang="en">
-  <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="robots" content="noindex">
-    <title>Home</title>
-    <link href="https://assets.iu.edu/favicon.ico" rel="shortcut icon" type="image/x-icon"/>
-    <link rel="stylesheet" href="https://unpkg.com/rivet-core@2.0.0-beta.2/css/rivet.min.css">
-    <script src="js/handlebars-v4.7.7.js"></script>   
     
-    <style>
-      img {
-        float:left;
-        width: 50px;  
-        height: 50px;
-        }
-  
-      h1 {
-        font-size: xx-large;
-        font-weight: bold;
-        }
-  
-      body{
-        text-align: center;
-        font-size: medium;
-      }
-  
-      div{
-        text-align: center;
-      }
-    </style>
-
-  </head>
-
-  {{{> header}}}
-
-  <body class="rvt-layout">
-  
+{{> header }}
     <!--Main content area-->
 
     <main id="main-content" class="rvt-layout__wrapper">
@@ -333,42 +294,10 @@
     }
     
     </style>
-      
-      </body>
 
 
-
-
-<!-- **************************************************************************
-    Footer: Copyright
-    -> v2.rivet.iu.edu/docs/components/footer/
-**************************************************************************** -->
-
-<footer class="rvt-footer-base">
-    <div class="rvt-container-lg">
-        <div class="rvt-footer-base__inner">
-            <div class="rvt-footer-base__logo">
-                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
-                    <polygon fill="currentColor" points="15.3 3.19 15.3 5 16.55 5 16.55 15.07 13.9 15.07 13.9 1.81 15.31 1.81 15.31 0 8.72 0 8.72 1.81 10.12 1.81 10.12 15.07 7.45 15.07 7.45 5 8.7 5 8.7 3.19 2.5 3.19 2.5 5 3.9 5 3.9 16.66 6.18 18.98 10.12 18.98 10.12 21.67 8.72 21.67 8.72 24 15.3 24 15.3 21.67 13.9 21.67 13.9 18.98 17.82 18.98 20.09 16.66 20.09 5 21.5 5 21.5 3.19 15.3 3.19" fill="#231f20" />
-                </svg>
-            </div>
-            <ul class="rvt-footer-base__list">
-              <li class="rvt-footer-base__item">
-                  <a class="rvt-footer-base__link" href="https://accessibility.iu.edu/assistance/">Accessibility</a>
-              </li>
-              <li class="rvt-footer-base__item">
-                  <a class="rvt-footer-base__link" href="https://www.iuk.edu/uits/privacy-policy.html/">Privacy Notice</a>
-              </li>
-              <li class="rvt-footer-base__item">
-                  Copyright</a> © 2021 The Trustees of Indiana University
-              </li>
-          </ul>
-        </div>
-    </div>
-</footer>
+{{> footer }}
 <script src="https://unpkg.com/rivet-core@2.0.0-beta.2/js/rivet.min.js"></script>
 <script>
   Rivet.init();
 </script>
-</body>
-</html>
