--- a/views/cancelation.html
+++ b/views/cancelation.html
@@ -125,7 +125,10 @@
   </fieldset>
     <input type="submit" class="rvt-button rvt-button--success" value="Add Cancelation" />
 </form>
-<a href = "/"><button class="rvt-button">Go Back </button></a> 
+<a href = "/"><button class="rvt-button">Go Back </button></a>
+<script>
+    
+</script> 
 </body>
 
 
