--- a/views/index.html
+++ b/views/index.html
@@ -107,6 +107,17 @@
         div{
           text-align: center;
         }
+        @media only screen and (max-width: 1079px) {
+        table{
+          padding: 0px;
+          display: table;
+          white-space: nowrap;
+        }
+
+        .rvt-button:hover{
+            font-size: 20px;
+        }
+      }
       </style>
   </header>
     <!--Main content area-->
