--- a/views/reservations.html
+++ b/views/reservations.html
@@ -114,6 +114,12 @@
       div{
         text-align: center;
       }
+      @media only screen and (max-width: 1079px) {
+        table{
+          padding: 0px;
+          display: table;
+          white-space: nowrap;
+        }
     </style>
 </header>
 
