--- a/views/confirmation.hbs
+++ b/views/confirmation.hbs
@@ -4,18 +4,18 @@
   <main id="main-content" class="rvt-layout__wrapper">
     
 
-  <h1>Confirmation</h1>
-  <p>Thank You!</p>
+  <h1>Study Room Confirmation</h1>
   
   <p>
-    Thank you for making your reservation at the IUK library. <br>
+    Your study room reservation at the IUK library was successful.<br>
     An email with your confirmation number has been sent.<br><br>
     <div class="row">
     
         <div class="col-md-12">
             <table style="width: 35%;">
                 <thead>
-                   Reservation Information
+                   <h2>Reservation Information:</h2>
+                   <br>
                 <tr>
                     <th>Confirmation&nbsp;Number</th>
                     <th>Date</th>
@@ -44,7 +44,7 @@
     <img src="/images/Icons8_flat_approval.png"> 
 </p>
 <div>
-    <a href = "/"><button class="rvt-button">Go Home </button></a>
+    <a href = "/"><button class="rvt-button">Return to Home </button></a>
 </div>
   </main>
   
