--- a/views/confirmcancelation.html
+++ b/views/confirmcancelation.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="robots" content="noindex">
-    <title>Student Info</title>
+    <title>Study Room Cancelation</title>
     <link href="https://assets.iu.edu/favicon.ico" rel="shortcut icon" type="image/x-icon"/>
     <link rel="stylesheet" href="https://unpkg.com/rivet-core@2.0.0-beta.2/css/rivet.min.css">
   </head>
@@ -113,14 +113,14 @@
     </header>
   </header>
 <body>
-  <h1>STUDY ROOM RESERVATIONS</h1>
-<p>Your study room appointment has been cancelled.<br>
-    To make another reservation, please click "Go Home"<br>
-    and fill out a new form.
+  <h1>Study Room Cancelation</h1>
+<p>Your study room appointment has been canceled.<br>
+    To make another reservation, please click "Return to Home"<br>
+    to fill out a new form.
 </p>
 <img src="/images/Icons8_flat_approval.png"> 
 <div>
-    <a href = "/"><button class="rvt-button">Go Home </button></a>
+    <a href = "/"><button class="rvt-button">Return to Home </button></a>
 </div>
 </body>
 <footer class="rvt-footer-base">
