--- a/views/index.html
+++ b/views/index.html
@@ -135,7 +135,7 @@
                     
                     <a href="/reservations" class="rvt-button">Reserve a Study Room</a>
     
-                    <a href="/cancelation" class="rvt-button">Cancel an existing Study Room</a>
+                    <a href="/cancelation" class="rvt-button">Cancel an Existing Study Room</a>
     
                   </div>
     
