--- a/views/reservations.html
+++ b/views/reservations.html
@@ -202,9 +202,9 @@
         
     </br>
     </fieldset>
-    <input type="submit" class="rvt-button rvt-button--success" value="Add Reservation" />
+    <input type="submit" class="rvt-button rvt-button--success" value="Continue" />
   </form>
-  <a href = "/"><button class="rvt-button">Go Back </button></a> 
+  <a href = "/"><button class="rvt-button">Return to Home</button></a> 
   <div>
   
 
