--- a/views/studentinfo.html
+++ b/views/studentinfo.html
@@ -119,9 +119,10 @@
     <form method="post" action="/studentinfo">
     
         <fieldset>
-    <label for="name" class="rvt-label">First and Last Name</label><br>
-    <input type="text" id="name" name="name" class="rvt-label" placeholder="John Doe" maxlength=30><br>
-    <br/>
+     <label for="fname" class="rvt-label">First Name</label><br>
+    <input type="text" id="fname" name="fname" class="rvt-label" placeholder="John" maxlength=30><br>
+    <label for="lname" class="rvt-label">Last Name</label><br>
+    <input type="text" id="lname" name="lname" class="rvt-label" placeholder="Doe" maxlength=30><br>
     <label for="idnum" class="rvt-label">Student ID Number</label><br>
     <input type="number" id="idnum" name="idnum" class="rvt-label" placeholder="0123456789" maxlength=10><br><br>
     <label for="email" class="rvt-label"></label>IU Email Address<br>
@@ -131,7 +132,7 @@
    
     <br/>
 </fieldset>
-<input type="submit" class="rvt-button rvt-button--success" value="Add Student" />
+<input type="submit" class="rvt-button rvt-button--success" value="Add Reservation" />
 </form>
 <a href = "/reservations"><button class="rvt-button">Go Back </button></a>  
 <div>
